--- a/Python 데이터 분석과 이미지 처리/Numpy기본사용법.ipynb
+++ b/Python 데이터 분석과 이미지 처리/Numpy기본사용법.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3]\n",
-      "3\n",
-      "3\n",
-      "int32\n",
-      "3\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/solsol/Documents/Programming/Pythonworkspace/pythonpractice/Python 데이터 분석과 이미지 처리/Numpy기본사용법.ipynb 셀 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/solsol/Documents/Programming/Pythonworkspace/pythonpractice/Python%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EB%B6%84%EC%84%9D%EA%B3%BC%20%EC%9D%B4%EB%AF%B8%EC%A7%80%20%EC%B2%98%EB%A6%AC/Numpy%EA%B8%B0%EB%B3%B8%EC%82%AC%EC%9A%A9%EB%B2%95.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/solsol/Documents/Programming/Pythonworkspace/pythonpractice/Python%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EB%B6%84%EC%84%9D%EA%B3%BC%20%EC%9D%B4%EB%AF%B8%EC%A7%80%20%EC%B2%98%EB%A6%AC/Numpy%EA%B8%B0%EB%B3%B8%EC%82%AC%EC%9A%A9%EB%B2%95.ipynb#ch0000000?line=2'>3</a>\u001b[0m list_data\u001b[39m=\u001b[39m[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/solsol/Documents/Programming/Pythonworkspace/pythonpractice/Python%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EB%B6%84%EC%84%9D%EA%B3%BC%20%EC%9D%B4%EB%AF%B8%EC%A7%80%20%EC%B2%98%EB%A6%AC/Numpy%EA%B8%B0%EB%B3%B8%EC%82%AC%EC%9A%A9%EB%B2%95.ipynb#ch0000000?line=3'>4</a>\u001b[0m array\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39marray(list_data)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
@@ -251,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -265,12 +265,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "78f5b707d86fd9281530b9fa2dbdbe1b33232c3b651a8e052360c651d4996094"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
